# bandyscout

./: README.md  app.py  pyproject.toml  test.py
data/: get_assets.py  get_matches.py  matches.csv
sportradar/: get_current_elitserien.py  get_elitserien_fixtures.py
streamlit_components/: figures.py  filters.py  menus.py  tables.py
