[tool.poetry]
name = "bandyscout"
version = "0.1.0"
description = ""
authors = ["robgriffin247 <robgriffin247@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
duckdb = "^1.1.3"
streamlit = "^1.41.1"
pandas = "^2.2.3"
polars = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
